CHANGELOG RoundCube Webmail
---------------------------

2008/06/30 (alec)
----------
- Added flag column on messages list (#1484623)

2008/06/24 (alec)
----------
- Patched Mail/MimePart.php (http://pear.php.net/bugs/bug.php?id=14232)

2008/06/24 (alec)
----------
- Allow trash/junk subfolders to be purged (#1485085)

2008/06/20 (alec)
----------
- Added Azerbaijani translation

2008/06/20 (thomasb)
----------
- Store compose parameters in session and redirect to a unique URL

2008/06/18 (thomasb)
----------
- Fixed CRAM-MD5 authentication (#1484819)
- Add fallback to old 'skin_path' property

2008/06/16 (alec)
----------
- Fixed sending emoticons
- Fixed forwarding messages with one HTML attachment (#1484442)
- Fixed encoding of message/rfc822 attachments and image/pjpeg handling (#1484914)

2008/06/15 (alec)
----------
- Added option to select skin in user preferences
  WARNING: option 'skin_path' replaced by 'skin' option!

2008/06/14 (alec)
----------
- Added option to disable displaying of attached images below the message body

2008/06/13 (alec)
----------
- Added option to display images in messages from known senders (#1484601)
- Updated PEAR::Mail_Mime
- User preferences grouped in more fieldsets

2008/06/12 (alec)
----------
- Fix corrupted MIME headers of messages in Sent folder (#1485111)
- Fixed bug in MDB2 package: http://pear.php.net/bugs/bug.php?id=14124
- Use keypress instead of keydown to select list's row (#1484816)

2008/06/11 (alec)
----------
- Don't call expunge and don't remove message row after message move 
  if flag_for_deletion is set to true (#1485002)

2008/06/08 (alec)
----------
- Added option to disable autocompletion from selected LDAP address books (#1484922)

2008/06/07 (thomasb)
----------
- Cleaned up localization names. Now named with lang_COUNTRY according to ISO 639-1/3166-1
- Updated Catalan localization

2008/06/06 (robin)
----------
- Add option to log successful logins

2008/06/06 (alec)
----------